[package]
name = "moore-rhdl"
version = "0.0.1"
authors = [
    "Fabian Schuiki <fschuiki@iis.ee.ethz.ch>",
    "Thomas Laferriere <t.laferriere@protonmail.com>"
]
edition = "2021"

description = "The RHDL implementation of the moore compiler framework."
repository = "https://github.com/fabianschuiki/moore"
license = "Apache-2.0 OR MIT"

[lib]
path = "lib.rs"

[dependencies]
moore-common = { path = "../common", version = "0.13.2" }
moore-rhdl-syntax = { path = "syntax", version = "0.0.1" }
lazy_static = "1.4"
llhd = "0.16"
# llhd = { git = "https://github.com/fabianschuiki/llhd" }
num = "0.3"
typed-arena = "2.0.1"
