[package]
name = "moore-rhdl-syntax"
version = "0.0.1"
authors = [
    "Fabian Schuiki <fschuiki@iis.ee.ethz.ch>",
    "Thomas Laferriere <t.laferriere@protonmail.com>"
]
edition = "2021"

description = "The RHDL parser implementation of the moore compiler framework."
repository = "https://github.com/fabianschuiki/moore"
license = "Apache-2.0 OR MIT"

[lib]
path = "lib.rs"

[dependencies]
moore-common = { path = "../../common", version = "0.13.2" }
once_cell = "1.3"
